// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar :props :defaultValue 1`] = `
<div class="t-calendar t-calendar--full" defaultvalue="Wed Nov 11 1998 00:00:00 GMT+0800 (China Standard Time)">
  <div class="t-calendar__control">
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell">
        <div>
          <div class="t-popup-reference" style="width: 100%; position: relative;">
            <div class="t-select t-size-s"><svg class="t-icon t-icon-undefined t-size-s t-select-left-icon" style="display: none;">
                <use xlink:href="#t-icon-undefined"></use>
              </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="2020" style="width: 0px;"> <span title="2020" class="t-select-selectedSingle">
        2020
      </span>
              <div class="t-input t-size-s t-select-input" style="display: none;"><input placeholder="2020" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-size-s t-select-right-icon">
                <use xlink:href="#t-icon-chevron-down"></use>
              </svg> <svg class="t-icon t-icon-close t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-close"></use>
              </svg> <svg class="t-icon t-icon-loading t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-loading"></use>
              </svg>
              <!---->
            </div>
            <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
              <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
              </div>
              <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="t-calendar__control-section-cell">
        <div>
          <div class="t-popup-reference" style="width: 100%; position: relative;">
            <div class="t-select t-size-s"><svg class="t-icon t-icon-undefined t-size-s t-select-left-icon" style="display: none;">
                <use xlink:href="#t-icon-undefined"></use>
              </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="12" style="width: 0px;"> <span title="12" class="t-select-selectedSingle">
        12
      </span>
              <div class="t-input t-size-s t-select-input" style="display: none;"><input placeholder="12" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-size-s t-select-right-icon">
                <use xlink:href="#t-icon-chevron-down"></use>
              </svg> <svg class="t-icon t-icon-close t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-close"></use>
              </svg> <svg class="t-icon t-icon-loading t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-loading"></use>
              </svg>
              <!---->
            </div>
            <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
              <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
              </div>
              <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell" style="height: auto;">
        <div class="t-radio-group t-radio-group-outline t-radio-group-small"><label class="t-radio-button t-is-checked"><input type="radio" class="t-radio-button__former" value="month"><span class="t-radio-button__input"></span><span class="t-radio-button__label">月</span></label><label class="t-radio-button"><input type="radio" class="t-radio-button__former" value="year"><span class="t-radio-button__input"></span><span class="t-radio-button__label">年</span></label></div>
      </div>
      <div class="t-calendar__control-section-cell"><button class="t-button t-size-s t-button--line">隐藏周末</button></div>
      <div class="t-calendar__control-section-cell"><button class="t-button t-size-s t-button--line">
          今天
        </button></div>
    </div>
  </div>
  <div class="t-calendar__panel">
    <div class="t-calendar__panel-title"></div>
    <table class="t-calendar__table">
      <thead class="t-calendar__table-head">
        <tr class="t-calendar__table-head-row">
          <th class="t-calendar__table-head-cell">
            一
          </th>
          <th class="t-calendar__table-head-cell">
            二
          </th>
          <th class="t-calendar__table-head-cell">
            三
          </th>
          <th class="t-calendar__table-head-cell">
            四
          </th>
          <th class="t-calendar__table-head-cell">
            五
          </th>
          <th class="t-calendar__table-head-cell">
            六
          </th>
          <th class="t-calendar__table-head-cell">
            日
          </th>
        </tr>
      </thead>
      <tbody class="t-calendar__table-body">
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">04</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">05</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">06</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">07</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">08</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">09</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">10</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">11</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">12</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">13</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">14</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">15</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">16</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-checked">
            <div class="t-calendar__table-body-cell-value">17</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">18</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">19</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">20</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">21</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">22</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">23</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">24</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">25</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">26</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">27</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">28</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">29</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">31</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Calendar :props :firstDayOfWeek 1`] = `
<div class="t-calendar t-calendar--full">
  <div class="t-calendar__control">
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell">
        <div>
          <div class="t-popup-reference" style="width: 100%; position: relative;">
            <div class="t-select t-size-s"><svg class="t-icon t-icon-undefined t-size-s t-select-left-icon" style="display: none;">
                <use xlink:href="#t-icon-undefined"></use>
              </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="2020" style="width: 0px;"> <span title="2020" class="t-select-selectedSingle">
        2020
      </span>
              <div class="t-input t-size-s t-select-input" style="display: none;"><input placeholder="2020" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-size-s t-select-right-icon">
                <use xlink:href="#t-icon-chevron-down"></use>
              </svg> <svg class="t-icon t-icon-close t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-close"></use>
              </svg> <svg class="t-icon t-icon-loading t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-loading"></use>
              </svg>
              <!---->
            </div>
            <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
              <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
              </div>
              <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="t-calendar__control-section-cell">
        <div>
          <div class="t-popup-reference" style="width: 100%; position: relative;">
            <div class="t-select t-size-s"><svg class="t-icon t-icon-undefined t-size-s t-select-left-icon" style="display: none;">
                <use xlink:href="#t-icon-undefined"></use>
              </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="12" style="width: 0px;"> <span title="12" class="t-select-selectedSingle">
        12
      </span>
              <div class="t-input t-size-s t-select-input" style="display: none;"><input placeholder="12" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-size-s t-select-right-icon">
                <use xlink:href="#t-icon-chevron-down"></use>
              </svg> <svg class="t-icon t-icon-close t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-close"></use>
              </svg> <svg class="t-icon t-icon-loading t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-loading"></use>
              </svg>
              <!---->
            </div>
            <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
              <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
              </div>
              <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell" style="height: auto;">
        <div class="t-radio-group t-radio-group-outline t-radio-group-small"><label class="t-radio-button t-is-checked"><input type="radio" class="t-radio-button__former" value="month"><span class="t-radio-button__input"></span><span class="t-radio-button__label">月</span></label><label class="t-radio-button"><input type="radio" class="t-radio-button__former" value="year"><span class="t-radio-button__input"></span><span class="t-radio-button__label">年</span></label></div>
      </div>
      <div class="t-calendar__control-section-cell"><button class="t-button t-size-s t-button--line">隐藏周末</button></div>
      <div class="t-calendar__control-section-cell"><button class="t-button t-size-s t-button--line">
          今天
        </button></div>
    </div>
  </div>
  <div class="t-calendar__panel">
    <div class="t-calendar__panel-title"></div>
    <table class="t-calendar__table">
      <thead class="t-calendar__table-head">
        <tr class="t-calendar__table-head-row">
          <th class="t-calendar__table-head-cell">
            三
          </th>
          <th class="t-calendar__table-head-cell">
            四
          </th>
          <th class="t-calendar__table-head-cell">
            五
          </th>
          <th class="t-calendar__table-head-cell">
            六
          </th>
          <th class="t-calendar__table-head-cell">
            日
          </th>
          <th class="t-calendar__table-head-cell">
            一
          </th>
          <th class="t-calendar__table-head-cell">
            二
          </th>
        </tr>
      </thead>
      <tbody class="t-calendar__table-body">
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">25</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">26</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">27</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">28</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">29</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">04</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">05</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">06</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">07</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">08</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">09</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">10</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">11</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">12</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">13</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">14</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">15</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">16</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-checked">
            <div class="t-calendar__table-body-cell-value">17</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">18</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">19</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">20</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">21</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">22</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">23</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">24</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">25</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">26</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">27</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">28</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">29</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">31</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">04</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">05</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Calendar :props :isShowWeekendDefault 1`] = `
<div class="t-calendar t-calendar--full">
  <div class="t-calendar__control">
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell">
        <div>
          <div class="t-popup-reference" style="width: 100%; position: relative;">
            <div class="t-select t-size-s"><svg class="t-icon t-icon-undefined t-size-s t-select-left-icon" style="display: none;">
                <use xlink:href="#t-icon-undefined"></use>
              </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="2020" style="width: 0px;"> <span title="2020" class="t-select-selectedSingle">
        2020
      </span>
              <div class="t-input t-size-s t-select-input" style="display: none;"><input placeholder="2020" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-size-s t-select-right-icon">
                <use xlink:href="#t-icon-chevron-down"></use>
              </svg> <svg class="t-icon t-icon-close t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-close"></use>
              </svg> <svg class="t-icon t-icon-loading t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-loading"></use>
              </svg>
              <!---->
            </div>
            <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
              <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
              </div>
              <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="t-calendar__control-section-cell">
        <div>
          <div class="t-popup-reference" style="width: 100%; position: relative;">
            <div class="t-select t-size-s"><svg class="t-icon t-icon-undefined t-size-s t-select-left-icon" style="display: none;">
                <use xlink:href="#t-icon-undefined"></use>
              </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="12" style="width: 0px;"> <span title="12" class="t-select-selectedSingle">
        12
      </span>
              <div class="t-input t-size-s t-select-input" style="display: none;"><input placeholder="12" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-size-s t-select-right-icon">
                <use xlink:href="#t-icon-chevron-down"></use>
              </svg> <svg class="t-icon t-icon-close t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-close"></use>
              </svg> <svg class="t-icon t-icon-loading t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-loading"></use>
              </svg>
              <!---->
            </div>
            <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
              <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
              </div>
              <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell" style="height: auto;">
        <div class="t-radio-group t-radio-group-outline t-radio-group-small"><label class="t-radio-button t-is-checked"><input type="radio" class="t-radio-button__former" value="month"><span class="t-radio-button__input"></span><span class="t-radio-button__label">月</span></label><label class="t-radio-button"><input type="radio" class="t-radio-button__former" value="year"><span class="t-radio-button__input"></span><span class="t-radio-button__label">年</span></label></div>
      </div>
      <div class="t-calendar__control-section-cell"><button class="t-button t-size-s t-button--line">显示周末</button></div>
      <div class="t-calendar__control-section-cell"><button class="t-button t-size-s t-button--line">
          今天
        </button></div>
    </div>
  </div>
  <div class="t-calendar__panel">
    <div class="t-calendar__panel-title"></div>
    <table class="t-calendar__table">
      <thead class="t-calendar__table-head">
        <tr class="t-calendar__table-head-row">
          <th class="t-calendar__table-head-cell">
            一
          </th>
          <th class="t-calendar__table-head-cell">
            二
          </th>
          <th class="t-calendar__table-head-cell">
            三
          </th>
          <th class="t-calendar__table-head-cell">
            四
          </th>
          <th class="t-calendar__table-head-cell">
            五
          </th>
          <!---->
          <!---->
        </tr>
      </thead>
      <tbody class="t-calendar__table-body">
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">04</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <!---->
          <!---->
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">07</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">08</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">09</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">10</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">11</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <!---->
          <!---->
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">14</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">15</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">16</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-checked">
            <div class="t-calendar__table-body-cell-value">17</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">18</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <!---->
          <!---->
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">21</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">22</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">23</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">24</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">25</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <!---->
          <!---->
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">28</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">29</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">31</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <!---->
          <!---->
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Calendar :props :isShowWeekendDefault 2`] = `
<div class="t-calendar t-calendar--full">
  <div class="t-calendar__control">
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell">
        <div>
          <div class="t-popup-reference" style="width: 100%; position: relative;">
            <div class="t-select t-size-s"><svg class="t-icon t-icon-undefined t-size-s t-select-left-icon" style="display: none;">
                <use xlink:href="#t-icon-undefined"></use>
              </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="2020" style="width: 0px;"> <span title="2020" class="t-select-selectedSingle">
        2020
      </span>
              <div class="t-input t-size-s t-select-input" style="display: none;"><input placeholder="2020" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-size-s t-select-right-icon">
                <use xlink:href="#t-icon-chevron-down"></use>
              </svg> <svg class="t-icon t-icon-close t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-close"></use>
              </svg> <svg class="t-icon t-icon-loading t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-loading"></use>
              </svg>
              <!---->
            </div>
            <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
              <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
              </div>
              <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="t-calendar__control-section-cell">
        <div>
          <div class="t-popup-reference" style="width: 100%; position: relative;">
            <div class="t-select t-size-s"><svg class="t-icon t-icon-undefined t-size-s t-select-left-icon" style="display: none;">
                <use xlink:href="#t-icon-undefined"></use>
              </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="12" style="width: 0px;"> <span title="12" class="t-select-selectedSingle">
        12
      </span>
              <div class="t-input t-size-s t-select-input" style="display: none;"><input placeholder="12" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-size-s t-select-right-icon">
                <use xlink:href="#t-icon-chevron-down"></use>
              </svg> <svg class="t-icon t-icon-close t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-close"></use>
              </svg> <svg class="t-icon t-icon-loading t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-loading"></use>
              </svg>
              <!---->
            </div>
            <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
              <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
              </div>
              <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell" style="height: auto;">
        <div class="t-radio-group t-radio-group-outline t-radio-group-small"><label class="t-radio-button t-is-checked"><input type="radio" class="t-radio-button__former" value="month"><span class="t-radio-button__input"></span><span class="t-radio-button__label">月</span></label><label class="t-radio-button"><input type="radio" class="t-radio-button__former" value="year"><span class="t-radio-button__input"></span><span class="t-radio-button__label">年</span></label></div>
      </div>
      <div class="t-calendar__control-section-cell"><button class="t-button t-size-s t-button--line">隐藏周末</button></div>
      <div class="t-calendar__control-section-cell"><button class="t-button t-size-s t-button--line">
          今天
        </button></div>
    </div>
  </div>
  <div class="t-calendar__panel">
    <div class="t-calendar__panel-title"></div>
    <table class="t-calendar__table">
      <thead class="t-calendar__table-head">
        <tr class="t-calendar__table-head-row">
          <th class="t-calendar__table-head-cell">
            一
          </th>
          <th class="t-calendar__table-head-cell">
            二
          </th>
          <th class="t-calendar__table-head-cell">
            三
          </th>
          <th class="t-calendar__table-head-cell">
            四
          </th>
          <th class="t-calendar__table-head-cell">
            五
          </th>
          <th class="t-calendar__table-head-cell">
            六
          </th>
          <th class="t-calendar__table-head-cell">
            日
          </th>
        </tr>
      </thead>
      <tbody class="t-calendar__table-body">
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">04</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">05</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">06</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">07</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">08</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">09</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">10</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">11</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">12</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">13</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">14</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">15</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">16</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-checked">
            <div class="t-calendar__table-body-cell-value">17</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">18</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">19</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">20</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">21</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">22</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">23</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">24</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">25</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">26</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">27</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">28</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">29</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">31</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Calendar :props :mode 1`] = `
<div class="t-calendar t-calendar--full">
  <div class="t-calendar__control">
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell">
        <div>
          <div class="t-popup-reference" style="width: 100%; position: relative;">
            <div class="t-select t-size-s"><svg class="t-icon t-icon-undefined t-size-s t-select-left-icon" style="display: none;">
                <use xlink:href="#t-icon-undefined"></use>
              </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="2020" style="width: 0px;"> <span title="2020" class="t-select-selectedSingle">
        2020
      </span>
              <div class="t-input t-size-s t-select-input" style="display: none;"><input placeholder="2020" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-size-s t-select-right-icon">
                <use xlink:href="#t-icon-chevron-down"></use>
              </svg> <svg class="t-icon t-icon-close t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-close"></use>
              </svg> <svg class="t-icon t-icon-loading t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-loading"></use>
              </svg>
              <!---->
            </div>
            <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
              <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
              </div>
              <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <!---->
    </div>
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell" style="height: auto;">
        <div class="t-radio-group t-radio-group-outline t-radio-group-small"><label class="t-radio-button"><input type="radio" class="t-radio-button__former" value="month"><span class="t-radio-button__input"></span><span class="t-radio-button__label">月</span></label><label class="t-radio-button t-is-checked"><input type="radio" class="t-radio-button__former" value="year"><span class="t-radio-button__input"></span><span class="t-radio-button__label">年</span></label></div>
      </div>
      <div class="t-calendar__control-section-cell">
        <!---->
      </div>
      <div class="t-calendar__control-section-cell"><button class="t-button t-size-s t-button--line">
          本月
        </button></div>
    </div>
  </div>
  <div class="t-calendar__panel">
    <div class="t-calendar__panel-title"></div>
    <table class="t-calendar__table">
      <tbody class="t-calendar__table-body">
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">一月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">二月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">三月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">四月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">五月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">六月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">七月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">八月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">九月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">十月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">十一月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
          <td class="t-calendar__table-body-cell t-is-checked">
            <div class="t-calendar__table-body-cell-value">十二月</div>
            <div class="t-calendar__table-body-cell-content"></div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Calendar :props :theme 1`] = `
<div class="t-calendar t-calendar--card">
  <div class="t-calendar__control">
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell">
        <div>
          <div class="t-popup-reference" style="width: 100%; position: relative;">
            <div class="t-select t-size-s"><svg class="t-icon t-icon-undefined t-size-s t-select-left-icon" style="display: none;">
                <use xlink:href="#t-icon-undefined"></use>
              </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="2020" style="width: 0px;"> <span title="2020" class="t-select-selectedSingle">
        2020
      </span>
              <div class="t-input t-size-s t-select-input" style="display: none;"><input placeholder="2020" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-size-s t-select-right-icon">
                <use xlink:href="#t-icon-chevron-down"></use>
              </svg> <svg class="t-icon t-icon-close t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-close"></use>
              </svg> <svg class="t-icon t-icon-loading t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-loading"></use>
              </svg>
              <!---->
            </div>
            <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
              <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
              </div>
              <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="t-calendar__control-section-cell">
        <div>
          <div class="t-popup-reference" style="width: 100%; position: relative;">
            <div class="t-select t-size-s"><svg class="t-icon t-icon-undefined t-size-s t-select-left-icon" style="display: none;">
                <use xlink:href="#t-icon-undefined"></use>
              </svg> <span class="t-select-placeholder" style="display: none;"> 请选择</span> <input type="hidden" name="t-select" value="12" style="width: 0px;"> <span title="12" class="t-select-selectedSingle">
        12
      </span>
              <div class="t-input t-size-s t-select-input" style="display: none;"><input placeholder="12" type="text" class="t-input__inner"></div> <svg class="t-icon t-icon-chevron-down t-size-s t-select-right-icon">
                <use xlink:href="#t-icon-chevron-down"></use>
              </svg> <svg class="t-icon t-icon-close t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-close"></use>
              </svg> <svg class="t-icon t-icon-loading t-size-s t-select-right-icon" style="display: none;">
                <use xlink:href="#t-icon-loading"></use>
              </svg>
              <!---->
            </div>
            <div dir="ltr" class="resize-sensor" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
              <div class="resize-sensor-expand" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s;"></div>
              </div>
              <div class="resize-sensor-shrink" style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;">
                <div style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"></div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="t-calendar__control-section">
      <div class="t-calendar__control-section-cell" style="height: auto;">
        <div class="t-radio-group t-radio-group-outline t-radio-group-small"><label class="t-radio-button t-is-checked"><input type="radio" class="t-radio-button__former" value="month"><span class="t-radio-button__input"></span><span class="t-radio-button__label">月</span></label><label class="t-radio-button"><input type="radio" class="t-radio-button__former" value="year"><span class="t-radio-button__input"></span><span class="t-radio-button__label">年</span></label></div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div class="t-calendar__panel">
    <div class="t-calendar__panel-title"></div>
    <table class="t-calendar__table">
      <thead class="t-calendar__table-head">
        <tr class="t-calendar__table-head-row">
          <th class="t-calendar__table-head-cell">
            一
          </th>
          <th class="t-calendar__table-head-cell">
            二
          </th>
          <th class="t-calendar__table-head-cell">
            三
          </th>
          <th class="t-calendar__table-head-cell">
            四
          </th>
          <th class="t-calendar__table-head-cell">
            五
          </th>
          <th class="t-calendar__table-head-cell">
            六
          </th>
          <th class="t-calendar__table-head-cell">
            日
          </th>
        </tr>
      </thead>
      <tbody class="t-calendar__table-body">
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">04</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">05</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">06</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">07</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">08</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">09</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">10</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">11</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">12</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">13</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">14</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">15</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">16</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell t-is-checked">
            <div class="t-calendar__table-body-cell-value">17</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">18</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">19</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">20</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">21</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">22</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">23</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">24</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">25</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">26</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">27</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
        </tr>
        <tr class="t-calendar__table-body-row">
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">28</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">29</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">30</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell">
            <div class="t-calendar__table-body-cell-value">31</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">01</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">02</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
          <td class="t-calendar__table-body-cell t-is-disabled">
            <div class="t-calendar__table-body-cell-value">03</div>
            <div class="t-calendar__table-body-cell-content">
              <!---->
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
